--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheldomn Coooper
     </title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+
+        <h3>my first website</h3>
+        <p>amar o porano jaha chiam maoi poalek ami chink  a</p>
+    </div>
 </body>
 </html>
